After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 776436 - ttml: Failed assertions with non-conformant input
ttml: Failed assertions with non-conformant input
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal normal
: 1.11.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-12-23 11:28 UTC by Chris Bass
Modified: 2017-03-15 11:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Replace assertions (6.60 KB, patch)
2016-12-23 11:31 UTC, Chris Bass
committed Details | Review

Description Chris Bass 2016-12-23 11:28:52 UTC
ttmlparse and ttmlrender contain g_asserts, which can cause program termination with non-conformant TTML input (e.g., the subtitles in https://bugzilla.gnome.org/attachment.cgi?id=336829).
Comment 1 Sebastian Dröge (slomo) 2016-12-23 11:30:28 UTC
That's why it currently is marked as experimental and requires --enable-experimental to get compiled. Thanks for filing a bug about this, I forgot to do so :)
Comment 2 Chris Bass 2016-12-23 11:31:49 UTC
Created attachment 342416 [details] [review]
Replace assertions

Remove assertions and handle error cases more gracefully.
Comment 3 Chris Bass 2017-03-15 09:16:14 UTC
Ping...
Comment 4 Sebastian Dröge (slomo) 2017-03-15 09:29:53 UTC
Comment on attachment 342416 [details] [review]
Replace assertions

Will merge later, thanks!
Comment 5 Sebastian Dröge (slomo) 2017-03-15 11:29:12 UTC
commit 4ac2a8d6a6587d4afbecdb6d3d0ed60d427a720b
Author: Chris Bass <floobleflam@gmail.com>
Date:   Fri Dec 23 11:07:00 2016 +0000

    ttml: Replace assertions
    
    Remove assertions and replace, where necessary, with code that handles
    the error cases.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=776436